--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "map-poc",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sandeshhd.github.io/maptest"
+  "homepage": "https://sandeshhd.github.io/maptest",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
